# wb_search_scan

./: .env-template  .gitignore  Dockerfile  Dockerfile_Searcher  docker-compose.yaml  pyproject.toml
searcher/: alembic.ini  celery_main.py  check.py  clickhouse_playground.py  main.py  playground.py  purge.py  settings.py  setup.py
searcher/actions/: requests_parse.py
searcher/alembic/: env.py
searcher/alembic/versions/: 146c6819faa7_.py  1c01a368417b_.py  4c678e8f5275_.py  9414672ee87c_.py  980c76e370bb_.py  c226e3e633d2_.py
searcher/clickhouse_db/: get_async_connection.py  setup.py
searcher/db/: __init__.py
searcher/db/models/: __init__.py  city.py  request.py  request_product.py
searcher/parser/: get_init_data.py  get_init_db_data.py  get_single_query_data.py  parser_main.py  save_to_db_worker.py
searcher/postgresql_db/: base.py
searcher/postgresql_db/models/: product.py  request_product.py
searcher/server/: server_main.py
searcher/server/funcs/: get_keywords_data.py  get_product_query_data.py  prepare_csv_contents.py  upload_requests_data.py
searcher/server/routers/: cities.py  load_csv.py  queries.py
